--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="form-group ">
         <h5 class="login">LOGIN</h5>
 
-        <input class="cs" id="emaillogin" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+        <input class="cs" id="emaillogin" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
           placeholder="Enter email">
 
       </div>
@@ -33,7 +33,7 @@
         <label class="form-check-label" for="exampleCheck1">forget Password</label>
       
       </div>
-      <button type="submit" class="btn btn-dark button" onclick="login()">Submit</button>
+      <button type="submit" class="btn btn-dark button" onclick="login()" windo>Submit</button>
     </form>
   </div>
 
@@ -58,14 +58,14 @@
 
 
 
-
+  <script src="./login.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
-    <script src="./login.js"></script>
+   
 
 
 
